<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true" >
    <LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:paddingBottom="@dimen/activity_vertical_margin"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin"
	    android:paddingTop="@dimen/activity_vertical_margin"
	    android:orientation="vertical"
	    tools:context=".UploadActivity" >
		<LinearLayout
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal" >
		    <Button 
		        android:id="@+id/from_file"
		        android:layout_height="wrap_content"
		        android:layout_width="match_parent"
		        android:layout_weight="1"
		        android:text="@string/device"/>
		    <Button
		        android:id="@+id/from_camera"
		        android:layout_height="wrap_content"
		        android:layout_width="match_parent"
		        android:layout_weight="1"
		        android:text="@string/camera" />
		</LinearLayout>
		<TextView 
	        android:id="@+id/submit_prompt"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:gravity="center"
	        android:text="@string/upload_submit"
	        style="@style/small_text" />
	    <ImageView
	        android:id="@+id/preview_image"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:scaleType="fitXY"
	        android:contentDescription="@string/photo" />
	    <EditText 
	        android:id="@+id/caption"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:hint="@string/caption" />
	    <LinearLayout
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal" >
		    <Button
		        android:id="@+id/submit_yes"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_weight="1"
		        android:text="@string/yes" />
		    <Button
		        android:id="@+id/submit_no"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_weight="1"
		        android:text="@string/cancel" />        
	    </LinearLayout>
	</LinearLayout>
</ScrollView>


