<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".RegisterActivity" >
	<EditText
	    android:id="@+id/register_username"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:hint="@string/username" />
	<EditText 
	    android:id="@+id/register_password"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:inputType="textPassword"
	    android:hint="@string/password" />
	<Button
	    android:id="@+id/register_submit"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_gravity="right"
	    android:text="@string/submit" />
</LinearLayout>
